# tree-sitter-php

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  eslint.config.mjs  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/workflows/: ci.yml  fuzz.yml  lint.yml  publish.yml
bindings/c/: tree-sitter-php.pc.in  tree-sitter-php_only.pc.in
bindings/go/: binding.go  binding_php.go  binding_php_only.go  binding_test.go  php.go  php_only.go
bindings/node/: binding.cc  binding_test.js  index.d.ts  index.js  php.js  php_only.js
bindings/rust/: README.md  build.rs  lib.rs
common/: common.mak  define-grammar.js  scanner.h
corpus/: expressions.txt  interpolation.txt  literals.txt  statements.txt  types.txt
corpus/classes/: interface_optional_method_modifier.phpt
php/: CMakeLists.txt  Makefile  grammar.js  package.json
php/src/: grammar.json  node-types.json
php_only/: CMakeLists.txt  Makefile  grammar.js  package.json
php_only/src/: grammar.json  node-types.json
queries/: highlights.scm  injections.scm  tags.scm
script/: parse-examples
src/: grammar.json  node-types.json  parser.c  scanner.c  scanner.cc
test/corpus/: bugs.txt  class.txt  declarations.txt  errors.txt  execution_operator.txt  expressions.txt  interpolation.txt  literals.txt  nowdoc.txt  php_only.txt  statements.txt  string.txt  text.txt  types.txt
test/highlight/: keywords.php  literals.php  (+2 more)
tree-sitter-php/: grammar.js
tree-sitter-php-only/: grammar.js
(+38 files in other folders)
