[package]
name = "tree-sitter-php"
description = "PHP grammar for tree-sitter"
version = "0.23.4"
authors = [
  "Max Brunsfeld <maxbrunsfeld@gmail.com>",
  "Amaan Qureshi <amaanq12@gmail.com>",
]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "php"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-php"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "common",
  "bindings/rust",
  "php/grammar.js",
  "php/src",
  "php_only/grammar.js",
  "php_only/src",
  "queries",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.1.15"

[dev-dependencies]
tree-sitter = "0.23"
